# pyeph

./: .gitignore  LICENCE  README.en.md  README.md  data.json  examples.ipynb  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yaml  change.md  change.yaml  feature.md  feature.yaml
.github/workflows/: publish.yaml  test.yml
docs/: Obtencion de Bases de Datos.md  calc.rst  conf.py  get.rst  index.rst  install.rst  quickstart.rst  requirements.txt
docs/Calculos/: 00. Introducción.md  01. Cálculo de Pobreza.md
docs/md/: index.md  install.md  labor_market.md  poverty.md  quickstart.md
docsold/: Obtencion de Bases de Datos.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_089f0b7102e5dfd8___init___py.html  z_089f0b7102e5dfd8__base_getter_py.html  z_089f0b7102e5dfd8_basket_py.html  z_089f0b7102e5dfd8_equivalent_adult_py.html  z_089f0b7102e5dfd8_mautic_py.html  z_089f0b7102e5dfd8_microdata_py.html  z_5d57b13a729749cb___init___py.html  z_5d57b13a729749cb_ads_py.html  z_5d57b13a729749cb_config_py.html  z_5d57b13a729749cb_errors_py.html  z_89eb630f1046de1a___init___py.html  z_89eb630f1046de1a_decorators_py.html  z_89eb630f1046de1a_labels_py.html  z_89eb630f1046de1a_merge_py.html  z_b51174c741878315___init___py.html  z_b51174c741878315__base_calculator_py.html  z_b51174c741878315__template_py.html  z_b51174c741878315__types_py.html  z_b51174c741878315_dwelling_py.html  z_b51174c741878315_labor_market_py.html  z_b51174c741878315_poverty_py.html
pyeph/: __init__.py  ads.py  config.py  decorators.py  errors.py
pyeph/.examples/: canasta_ejemplo.csv
pyeph/.files/: EPH_tot_urbano_estructura_bases.xlsx
pyeph/calc/: README.md  __init__.py  _base_calculator.py  _template.py  _types.py  api.py  calculator.py  dwelling.py  labor_market.py  poverty.py  types.py
pyeph/calc/labor_market/: README.md  __init__.py
pyeph/calc/map_eph_labels/: __init__.py
pyeph/calc/poverty/: README.md  __init__.py
pyeph/calc/template/: README.md  __init__.py
pyeph/get/: _base_getter.py  api.py  basket.py  equivalent_adult.py  gateway.py  getter.py  handler.py  mautic.py  microdata.py
pyeph/get/basket/: __init__.py  constants.py
pyeph/get/equivalent_adult/: __init__.py
pyeph/get/mautic/: __init__.py  types.py
pyeph/get/microdata/: __init__.py  types.py  validator.py
pyeph/tests/: test_errors.py  test_get.py
pyeph/tools/: __init__.py  api.py  labels.py  merge.py  spinner.py
tests/: test_dwelling.py  test_error_handling.py  test_exceptions.py  test_get.py
