[tool.poetry]
name = "pyeph"
version = "v1.1.5"
description = "PyEPH es una librería para el procesamiento de la Encuesta Permanente de Hogares (eph) en Python. Permite la descarga de archivos de EPH's y otros como la canasta basica y adulto equivalente , como asi también algunos calculos rápidos relacionados con las mismas"
authors = ["Maria Carolina Trogliero, Mariano Valdez Anopa, Maria Gaska"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"
wget = "^3.2"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
