[tool.poetry]
name = "pyeph"
version = "v1.6.1"
description = "PyEPH es una librería para el procesamiento de la Encuesta Permanente de Hogares (eph) en Python. Permite la descarga de archivos de EPH's y otros como la canasta basica y adulto equivalente , como asi también algunos calculos rápidos relacionados con las mismas"
authors = ["Maria Carolina Trogliero, Mariano Valdez Anopa, Maria Gaska"]
license = "MIT"
homepage = "https://github.com/institutohumai/pyeph/"
readme = "README.md"
documentation = "https://pyeph.readthedocs.io/es/latest/"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
requests = "^2.31.0"
tqdm = "^4.66.0"
ipykernel = "^6.13.0"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --disable-warnings"

[tool.coverage.run]
source = ["pyeph"]
relative_files = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/env/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
